[bug 1741322] Adding fakey class for less horrible flicker.

--- a/widget/datatable/src/css/datatable-core.css
+++ b/widget/datatable/src/css/datatable-core.css
@@ -1,4 +1,12 @@
 /* foundational CSS */
+.yui-dt {
+    border:1px solid transparent;
+}
+
+.yui-dt-noop {
+    border:none;
+}
+
 .yui-dt-liner {
     overflow:hidden;
 }
